--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -667,6 +667,64 @@
       <p class="fecha">Fecha: <span id="fecha"></span></p>
       <p class="hora">Hora: <span id="hora"></span></p>
     </div>
+    <div class="lineas-horizontales">
+      <div class="linea-pequena2"></div>
+      <div class="linea-pequena3"></div>
+      <div class="linea-pequena4"></div>
+      <div class="linea-pequena5"></div>
+      <div class="linea-pequena6"></div>
+      <div class="linea-grande2"></div>
+      <div class="linea-pequena7"></div>
+      <div class="linea-pequena8"></div>
+      <div class="linea-pequena9"></div>
+      <div class="linea-pequena10"></div>
+      <div class="linea-pequena11"></div>
+      <div class="linea-pequena12"></div>
+      <div class="linea-grande3"></div>
+      <div class="linea-pequena13"></div>
+      <div class="linea-pequena14"></div>
+      <div class="linea-pequena15"></div>
+      <div class="linea-pequena16"></div>
+      <div class="linea-pequena17"></div>
+      <div class="linea-pequena18"></div>
+      <div class="linea-grande4"></div>
+      <div class="linea-pequena19"></div>
+      <div class="linea-pequena20"></div>
+      <div class="linea-pequena21"></div>
+      <div class="linea-pequena22"></div>
+      <div class="linea-pequena23"></div>
+      <div class="linea-grande5"></div>
+      <div class="linea-pequena24"></div>
+      <div class="linea-pequena25"></div>
+      <div class="linea-pequena26"></div>
+      <div class="linea-pequena27"></div>
+      <div class="linea-pequena28"></div>
+      <div class="linea-grande6"></div>
+      <div class="linea-pequena29"></div>
+      <div class="linea-pequena30"></div>
+      <div class="linea-pequena31"></div>
+      <div class="linea-pequena32"></div>
+      <div class="linea-pequena33"></div>
+      <div class="linea-grande7"></div>
+      <div class="linea-pequena34"></div>
+      <div class="linea-pequena35"></div>
+      <div class="linea-pequena36"></div>
+      <div class="linea-pequena37"></div>
+      <div class="linea-pequena38"></div>
+      <div class="linea-grande8"></div>
+      <div class="linea-pequena39"></div>
+      <div class="linea-pequena40"></div>
+      <div class="linea-pequena41"></div>
+      <div class="linea-pequena42"></div>
+      <div class="linea-grande9"></div>
+      <div class="linea-pequena43"></div>
+      <div class="linea-pequena44"></div>
+      <div class="linea-pequena45"></div>
+      <div class="linea-pequena46"></div>
+      <div class="linea-pequena47"></div>
+      <div class="linea-grande10"></div>
+      <div class="linea-grande11"></div>
+    </div>
     <script src="/static/scripts/record_academico.js"></script>
   </body>
 </html>
