--- a/Ejecutable/templates/index.html
+++ b/Ejecutable/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intranet - San Juan en Línea</title>
-    <link rel="stylesheet" href="/static/css/intranet_home.css" />
+    <link rel="stylesheet" href="/static/css/index.css" />
     <!-- Bootstrap CSS -->
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -155,6 +155,6 @@
       </div>
     </div>
 
-    <script src="/static/scripts/intranet_home.js"></script>
+    <script src="/static/scripts/index.js"></script>
   </body>
 </html>
