--- a/Ejecutable/static/css/index.css
+++ b/Ejecutable/static/css/index.css
@@ -1,9 +1,10 @@
 body {
-  background-image: url("/static/images/fondo_principal.png");
-  background-color: rgba(247, 247, 255, 1);
-  background-repeat: repeat;
-  background-size: auto;
-  background-position: center;
+  background-image: url("/static/images/Fondo-1920x1080.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  /* background-size: auto; */
+  /* background-position: center; */
   position: relative;
   min-height: 109vh;
 }
