--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -136,7 +136,13 @@
       
 
       <div class="container">
-        <!-- <div> <h3>mi calificacione</h3> </div> -->
+        <nav class="breadcrumb" aria-label="Breadcrumb navigation">
+          <h1 class="breadcrumb__title">
+            <span class="breadcrumb__section">INFORMACIÓN ACADÉMICA</span>
+            <span class="breadcrumb__separator">/</span>
+            <span class="breadcrumb__section breadcrumb__section--active">MI RECORD ACADÉMICO</span>
+          </h1>
+        </nav>
         <div class="red-header">
           <div class="boton-flecha">
             <button>
@@ -151,8 +157,8 @@
             class="logo-sjb"
           />
             <div class="date-info">
-                <div>Fecha:</div>
-                <div>Hora:</div>
+                <div>Fecha: 29/12/2024</div>
+                <div>Hora: 00:01 AM</div>
             </div>
         </div>
 
@@ -185,7 +191,7 @@
           
         </div>
         <div class="container-table">
-          <div class="semester-header">Semestre : 2020-1</div>
+          <div class="semester-header"> Semestre : 2020-1</div>
           <table>
             <thead>
               <tr>
