--- a/Ejecutable/static/css/record.css
+++ b/Ejecutable/static/css/record.css
@@ -1,64 +1,74 @@
- body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+
+body {
     margin: 0;
     padding: 20px;
     height: 100%;
+
 }
 
 body {
-    font-family:  sans-serif;
     background-image: url("/static/images/Fondo-1920x1080.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed; /* Esto asegura que la imagen no se mueva con el scroll */
+    background-attachment: fixed;
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 400;
+    margin: 0 auto;
+
 }
 
 
 .container {
     max-width: 900em;
+    width: 900px;
     margin: 0 auto;
-    width: 50em;
+    /* width: 50em; */
     margin-top: 8em;
     margin-bottom: 1em;
     background: white;
     position: relative;
     overflow: hidden;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.container-record{
-    /* max-width: 40em; */
+
+.container-record {
     margin-top: 8em;
-    /* background: white;
-    position: relative; */
     padding: 0 30px;
     margin: 0 auto;
     width: 75%;
-    /* box-shadow: 0 0 10  */
 }
 
 .red-header {
     background-color: #ff0033;
-    height: 120px; 
+    height: 120px;
     position: absolute;
-    width: 48.5em;
+    width: 62.9em;
     position: relative;
     background-color: rgba(255, 10, 65, 255);
     clip-path: polygon(0 30%, 100% 0, 100% 100%, 0 100%);
     margin: 0 10px;
-    z-index: 0; 
+    z-index: 0;
 }
 
 .header {
     margin: 0 10px;
     display: flex;
     justify-content: start;
+    margin-top: 10px;
     margin-bottom: 30px;
+    font-size: 12px;
+    opacity: 1;
+
 }
 
 .logo-sjb {
-    width: 249px; 
-    margin-right: 20em; 
+    width: 249px;
+    margin-right: 35em;
 }
-  
+
 
 .date-info {
     font-size: 14px;
@@ -66,7 +76,7 @@ body {
 
 .title {
     text-align: center;
-    font-size: 24px;
+    font-size: 25px;
     font-weight: 400;
     margin-bottom: 40px;
 }
@@ -78,16 +88,22 @@ body {
 .info-row {
     display: flex;
     margin-bottom: 10px;
+    font-weight: 400;
+
 }
 
 .info-label {
     width: 150px;
     margin-right: 30px;
     font-weight: bold;
+    font-size: 14px;
+    letter-spacing: .5px;
 }
 
 .info-value {
     flex: 1;
+    font-weight: 300;
+
 }
 
 .container-table {
@@ -95,54 +111,65 @@ body {
     justify-content: center; */
     margin: 20px 0;
 }
+
 table {
     margin: 0 auto;
     margin-top: 2px;
     width: 80%;
     border-collapse: collapse;
     background-color: white;
-    
+
 }
-th, td {
+
+th,
+td {
     background-color: #ffffff;
     text-align: start;
-    font-size: 15px;
-    padding: 8px;
+    font-size: 14px;
+    padding: 5px 8px;
     position: relative;
-    
+
 }
 
 td {
-    font-size: 15px;
+    font-size: 14px;
 }
+
 th {
     background-color: transparent;
     font-weight: bold;
 }
+
 th::after {
-    margin: 0 10px;
+    /* margin: 0 10px; */
 
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100vw;
-    height: 3px;
-    background-color: #e4e2e2;
+    height: 1px;
+    background-color: #c9c9c9;
     transform: translateX(-50%);
 }
-td {
-    border-bottom: 1px solid #ddd;
-}
 
+td {
+    border-bottom: 1px solid #c9c9c9;
+    max-width: 512px;
+    
+}
+/* 502.297px */
 
 
 .semester-header {
-    background-color: #f5f5f5;
+    background-color: #e0e0e0;
     padding: 8px 0;
     margin: 0 10px;
-    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    letter-spacing: .6px;
     text-align: center;
+    border-top: #9e9e9e 1px solid;
 }
 
 
@@ -153,9 +180,9 @@ td {
     align-items: center;
     align-content: center;
 }
-  
+
 .boton-flecha button {
-    margin: 40px 10px ;
+    margin: 40px 10px;
     background-color: #FFFFFF;
     border: 1px solid rgba(219, 224, 228, 255);
     padding: 11px 97px;
@@ -171,11 +198,11 @@ td {
 }
 
 .boton-flecha .flecha {
-width: 12px;
-height: 12px;
-margin-left: 5px;
-vertical-align: middle;
-transform: translateX(83px) translateY(-1px); 
+    width: 12px;
+    height: 12px;
+    margin-left: 5px;
+    vertical-align: middle;
+    transform: translateX(83px) translateY(-1px);
 }
 
 
@@ -186,54 +213,61 @@ transform: translateX(83px) translateY(-1px);
     margin: 8px 0;
     font-size: 14px;
     letter-spacing: 0.5px;
-    span{
+
+    span {
         margin-right: 40px;
     }
-  }
-  
+}
 
 
-  .resumen-promedio{
+
+.resumen-promedio {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 10px;
-  }
-  .Resumen {
+}
+
+.Resumen {
     font-weight: 700;
     color: rgb(0, 0, 0);
     font-size: 14px;
-  }
+}
 
-  
-  .total_cursos, .total_creditos, .nota_informativa {
+
+.total_cursos,
+.total_creditos,
+.nota_informativa {
     font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     color: rgb(0, 0, 0);
     font-size: 14px;
-  }
-  
+}
 
-  .sin_valor{
+
+.sin_valor {
     margin-top: 10px;
     display: flex;
     justify-content: end;
-    p{
+
+    p {
         font-style: normal;
         font-weight: bold;
     }
-  }
-  .boton-imprimir{
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: sans-serif;
-      font-style: normal;
-      margin-bottom: 50px;
-      button {
+}
+
+.boton-imprimir {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: sans-serif;
+    font-style: normal;
+    margin-bottom: 50px;
+
+    button {
         font-weight: 400;
         color: rgb(255, 255, 255);
         font-size: 16px;
@@ -243,11 +277,38 @@ transform: translateX(83px) translateY(-1px);
         padding: 7px 52px;
         cursor: pointer;
         border-radius: 4px;
-      }
-  }
-  
-  .boton-imprimir{ 
+    }
+}
+
+.boton-imprimir {
     button:hover {
-    background-color: rgba(217, 9, 55, 255);
-  }
+        background-color: rgba(217, 9, 55, 255);
+    }
+}
+
+.breadcrumb {
+    margin: 10px 10px;
+    /* padding: 1rem; */
+    font-family: 'Poppins', sans-serif;
+
+}
+
+.breadcrumb__title {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin: 0;
+    line-height: 1.5;
+}
+
+.breadcrumb__section {
+    color: #333;
+}
+
+.breadcrumb__section--active {
+    color: #ff0033;
+}
+
+.breadcrumb__separator {
+    margin: 0 0.5rem;
+    color: #666;
 }
