--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -226,7 +226,7 @@
               </tr>
               <tr>
                 <td>003554</td>
-                <td>INTERCULTURALIDAD</td>
+                <td class="data-tf">INTERCULTURALIDAD</td>
                 <td>3</td>
                 <td>01</td>
                 <td>18</td>
@@ -279,7 +279,7 @@
               </tr>
               <tr>
                 <td>003173</td>
-                <td>DERECHO EN SALUD</td>
+                <td class="data-tf">DERECHO EN SALUD</td>
                 <td>3</td>
                 <td>02</td>
                 <td>13</td>
@@ -438,7 +438,7 @@
             <tbody>
               <tr>
                 <td>003189</td>
-                <td>INTEGRADORA I</td>
+                <td class="data-tf">INTEGRADORA I</td>
                 <td>6</td>
                 <td>05</td>
                 <td>11</td>
@@ -476,6 +476,7 @@
           <div class="promedio-ponderado">
             <span>Promedio Ponderado: 12.2</span>
           </div>
+          
           <div class="semester-header">Semestre : 2022-2</div>
           <table>
             <thead>
@@ -490,7 +491,7 @@
             <tbody>
               <tr>
                 <td>003175</td>
-                <td>FISIOPATOLOGÍA I</td>
+                <td class="data-tf">FISIOPATOLOGÍA I</td>
                 <td>6</td>
                 <td>06</td>
                 <td>13</td>
@@ -551,7 +552,7 @@
               </tr>
               <tr>
                 <td>003189</td>
-                <td>INTEGRADORA II</td>
+                <td class="data-tf">INTEGRADORA II</td>
                 <td>6</td>
                 <td>07</td>
                 <td>08</td>
@@ -604,7 +605,7 @@
               </tr>
               <tr>
                 <td>003189</td>
-                <td>INTEGRADORA II</td>
+                <td class="data-tf">INTEGRADORA II</td>
                 <td>6</td>
                 <td>08</td>
                 <td>12</td>
@@ -657,21 +658,21 @@
               </tr>
               <tr>
                 <td>093801</td>
-                <td>MEDICINA LEGAL</td>
+                <td class="data-tf">MEDICINA LEGAL</td>
                 <td>2</td>
                 <td>09</td>
                 <td>17</td>
               </tr>
               <tr>
                 <td>093901</td>
-                <td>REDACCION Y PUBLICACION DE ARTICULOS II</td>
+                <td class="data-tf">REDACCION Y PUBLICACION DE ARTICULOS II</td>
                 <td>2</td>
                 <td>09</td>
                 <td>16</td>
               </tr>
               <tr>
                 <td>093701</td>
-                <td>ELECTIVO 4</td>
+                <td class="data-tf">ELECTIVO 4</td>
                 <td>2</td>
                 <td>09</td>
                 <td>15</td>
@@ -724,7 +725,7 @@
               </tr>
               <tr>
                 <td>004565</td>
-                <td>Redacción y Publicación de Artículos I</td>
+                <td class="data-tf">Redacción y Publicación de Artículos I</td>
                 <td>2</td>
                 <td>10</td>
                 <td>16</td>
@@ -742,7 +743,7 @@
             <p class="Resumen">Resumen</p>
             <p class="Resumen">Promedio Ponderado General: 15.310</p>
           </div>
-          <p class="total_cursos">Total de Cursos Aprobados: 46</p>
+          <p class="total_cursos">Total de Cursos Aprobados: 58</p>
           <p class="total_creditos">Total de Créditos Aprobados: 177</p>
           
           <div class="sin_valor">
