--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -584,7 +584,7 @@
             <span>Promedio Ponderado: 12</span>
           </div>
 
-          <div class="semester-header">Semestre : 2023-2</div>
+          <div class="semester-header">Fisiopatologia tendría que ser así (Fisiopatologia II)</div>
           <table>
             <thead>
               <tr>
