--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -584,7 +584,7 @@
             <span>Promedio Ponderado: 12</span>
           </div>
 
-          <div class="semester-header">Fisiopatologia II</div>
+          <div class="semester-header">Semestre : 2023-2</div>
           <table>
             <thead>
               <tr>
@@ -612,7 +612,7 @@
               </tr>
               <tr>
                 <td>003173</td>
-                <td>FISIOPATOLOGÍA</td>
+                <td>Fisiopatologia II</td>
                 <td>6</td>
                 <td>08</td>
                 <td>13</td>
