--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -612,7 +612,7 @@
               </tr>
               <tr>
                 <td>003173</td>
-                <td>Fisiopatologia II</td>
+                <td>FISIOPATOLOGIA II</td>
                 <td>6</td>
                 <td>08</td>
                 <td>13</td>
@@ -684,54 +684,54 @@
           </div>
 
           <div class="semester-header">Semestre : 2024-2</div>
-          <table>
-            <thead>
-              <tr>
-                <th>Código</th>
-                <th>Curso</th>
-                <th>Crd</th>
-                <th>Ciclo</th>
-                <th>Nota</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>004561</td>
-                <td>Atención del Paciente en Salud Mental</td>
-                <td>2</td>
-                <td>10</td>
-                <td>17</td>
-              </tr>
-              <tr>
-                <td>093601</td>
-                <td>Clínica y Terapéutica en Cirugía I</td>
-                <td>10</td>
-                <td>10</td>
-                <td>16</td>
-              </tr>
-              <tr>
-                <td>004563</td>
-                <td>Seminario de Ciencias Básicas Aplicadas a la Clínica I</td>
-                <td>3</td>
-                <td>10</td>
-                <td>17</td>
-              </tr>
-              <tr>
-                <td>004564</td>
-                <td>Gestión Estratégica y Emprendimiento en Servicios de Salud</td>
-                <td>3</td>
-                <td>10</td>
-                <td>17</td>
-              </tr>
-              <tr>
-                <td>004565</td>
-                <td class="data-tf">Redacción y Publicación de Artículos I</td>
-                <td>2</td>
-                <td>10</td>
-                <td>16</td>
-              </tr>
-            </tbody>
-          </table>
+            <table>
+              <thead>
+                  <tr>
+                      <th>Código</th>
+                      <th>Curso</th>
+                      <th>Crd</th>
+                      <th>Ciclo</th>
+                      <th>Nota</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>004561</td>
+                      <td>ATENCIÓN DEL PACIENTE EN SALUD MENTAL</td>
+                      <td>2</td>
+                      <td>10</td>
+                      <td>17</td>
+                  </tr>
+                  <tr>
+                      <td>093601</td>
+                      <td>CLÍNICA Y TERAPÉUTICA EN CIRUGÍA I</td>
+                      <td>10</td>
+                      <td>10</td>
+                      <td>16</td>
+                  </tr>
+                  <tr>
+                      <td>004563</td>
+                      <td>SEMINARIO DE CIENCIAS BÁSICAS APLICADAS A LA CLÍNICA I</td>
+                      <td>3</td>
+                      <td>10</td>
+                      <td>17</td>
+                  </tr>
+                  <tr>
+                      <td>004564</td>
+                      <td>GESTIÓN ESTRATÉGICA Y EMPRENDIMIENTO EN SERVICIOS DE SALUD</td>
+                      <td>3</td>
+                      <td>10</td>
+                      <td>17</td>
+                  </tr>
+                  <tr>
+                      <td>004565</td>
+                      <td class="data-tf">REDACCIÓN Y PUBLICACIÓN DE ARTÍCULOS I</td>
+                      <td>2</td>
+                      <td>10</td>
+                      <td>16</td>
+                  </tr>
+              </tbody>
+            </table>
           <div class="promedio-ponderado">
             <span>Promedio Ponderado: 16.5</span>
           </div>
