--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -491,7 +491,7 @@
             <tbody>
               <tr>
                 <td>003175</td>
-                <td class="data-tf">FISIOPATOLOGÍA I</td>
+                <td class="data-tf">FISIOPATOLOGIA I</td>
                 <td>6</td>
                 <td>06</td>
                 <td>13</td>
