--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -697,14 +697,14 @@
               <tbody>
                   <tr>
                       <td>004561</td>
-                      <td>ATENCIÓN DEL PACIENTE EN SALUD MENTAL</td>
+                      <td>ATENCIÓN DEL PACIENTE EN SALUD MENTAL I</td>
                       <td>2</td>
                       <td>10</td>
                       <td>17</td>
                   </tr>
                   <tr>
                       <td>093601</td>
-                      <td>CLÍNICA Y TERAPÉUTICA EN CIRUGÍA I</td>
+                      <td>CLÍNICA Y TERAPÉUTICA EN CIRUGÍA II</td>
                       <td>10</td>
                       <td>10</td>
                       <td>16</td>
@@ -725,7 +725,7 @@
                   </tr>
                   <tr>
                       <td>004565</td>
-                      <td class="data-tf">REDACCIÓN Y PUBLICACIÓN DE ARTÍCULOS I</td>
+                      <td class="data-tf">REDACCIÓN Y PUBLICACIÓN DE ARTÍCULOS III</td>
                       <td>2</td>
                       <td>10</td>
                       <td>16</td>
