--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -552,7 +552,7 @@
               </tr>
               <tr>
                 <td>003189</td>
-                <td class="data-tf">INTEGRADORA II</td>
+                <td class="data-tf">INTEGRADORA I</td>
                 <td>6</td>
                 <td>07</td>
                 <td>08</td>
@@ -644,7 +644,7 @@
             <tbody>
               <tr>
                 <td>093501</td>
-                <td>ATENCION DEL CLIENTE EN SALUD MENTAL</td>
+                <td>ATENCION DEL CLIENTE EN SALUD MENTAL I</td>
                 <td>5</td>
                 <td>09</td>
                 <td>16</td>
@@ -697,7 +697,7 @@
               <tbody>
                   <tr>
                       <td>004561</td>
-                      <td>ATENCIÓN DEL PACIENTE EN SALUD MENTAL I</td>
+                      <td>ATENCIÓN DEL CLIENTE EN SALUD MENTAL II</td>
                       <td>2</td>
                       <td>10</td>
                       <td>17</td>
