--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -172,7 +172,7 @@
               </div>
               <div class="info-row">
                   <div class="info-label">Nombre Completo :</div>
-                  <div class="info-value">ROJAS LUCAS ANGELA IBETH</div>
+                  <div class="info-value">ROJAS LICAS ANGELA IBETH</div>
               </div>
               <div class="info-row">
                   <div class="info-label">Situación :</div>
