--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -605,7 +605,7 @@
               </tr>
               <tr>
                 <td>003189</td>
-                <td class="data-tf">INTEGRADORA II</td>
+                <td class="data-tf">INTEGRADORA I</td>
                 <td>6</td>
                 <td>08</td>
                 <td>12</td>
